# cjcraft

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
shaders/: CMakeLists.txt  frag.frag  vert.vert
src/: CMakeLists.txt  main.cpp
src/container/: CMakeLists.txt  hash_map.h  vector.h
src/control/: CMakeLists.txt  camera.cpp  camera.h  key.cpp  key.h
src/loader/: CMakeLists.txt  code.cpp  code.h  texture.cpp  texture.h
src/math/: CMakeLists.txt  math.h
src/renderer/: CMakeLists.txt  core.h  renderer.cpp
src/renderer/context/: CMakeLists.txt  context.cpp  context.h  device.cpp  device.h  instance.cpp  instance.h
src/renderer/memory/: CMakeLists.txt  buffer_manager.cpp  buffer_manager.h  image_manager.cpp  image_manager.h
src/renderer/pipeline/: CMakeLists.txt  framebuffer.cpp  framebuffer.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  shader.cpp  shader.h
src/renderer/pool/: CMakeLists.txt  command.cpp  command.h  descriptor.cpp  descriptor.h
src/renderer/present/: CMakeLists.txt  surface.cpp  surface.h  swapchain.cpp  swapchain.h
src/renderer/resource/: CMakeLists.txt  buffer.h  image.cpp  image.h  sampler.cpp  sampler.h
src/renderer/sync/: CMakeLists.txt  fence.cpp  fence.h  semaphore.cpp  semaphore.h
src/world/: CMakeLists.txt  block.h  chunk.cpp  chunk.h  ray.cpp  ray.h  terrain.cpp  world.cpp  world.h
